--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -30,4 +26,79 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* new css */
+.m-tp-10 {
+  margin-top: 30px;
+}
+
+.m-tp-30 {
+  margin-top: 30px;
+}
+
+.flex-row {
+  display: flex;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.min-width-200 {
+  min-width: 200px;
+}
+
+.min-height-100 {
+  min-height: 100px;
+}
+
+.min-height-200 {
+  min-height: 200px;
+}
+
+.pos-r {
+  position: relative;
+}
+
+.c-progress {
+  height: 30px;
+}
+
+.c-progress-bar {
+  position: absolute;
+}
+
+.c-progress-bar.bg-score {
+  background-color: #717171;
+  z-index: 2;
+  height: 30px;
+}
+
+.c-progress-bar.bg-minscore {
+  background-color: #000000;
+  z-index: 3;
+  height: 30px;
+}
+
+.c-progress-bar.bg-maxscore {
+  background-color: #D2D2D2;
+  z-index: 1;
+  height: 30px;
+}
+
+.clr-green {
+  color: green;
+}
+
+.clr-red {
+  color: red;
+}
+
+.clr-orange {
+  color: orange;
 }
